# personal-finance

./: README.md  bank_colors.json  config.toml  debug.py  main.py  pyproject.toml
dashboard/: app.py  fragments.py
data/: demo_data.xlsx
personal_finance/: account.py  analysis.py  data.py  figures.py  holdings.py
personal_finance/figures/: account_line.py  balance_pie_chart.py  holdings_analysis.py  holdings_stacked.py  monthly_bars.py  stacked_accounts.py
tests/: test_basic.py
