[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "streamlit>=1.51.0",
    "streamlit-aggrid>=1.2.0",
    "plotly>=5.24.1"
]
[tool.setuptools.packages.find]
include = ["personal_finance"]