[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "streamlit==1.53.1",
    "streamlit-aggrid==1.2.1.post2",
    "streamlit-extras>=0.7.8",
    "plotly==6.5.2",
]
[tool.setuptools.packages.find]
include = ["personal_finance"]
